<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">CharmLive</string>
    <string name="txt_splash_dec">This is my sologan !</string>
    <string name="tip_waitlogin">Logining...</string>
    <string name="tip_loading">Loading...</string>
    <string name="tip_failed_to_load">Failed to load.</string>
    <string name="tip_reload">Reload</string>
    <string name="txt_hint_input_general">Say something...</string>
    <string name="txt_close">Close</string>
    <string name="tip_emoji_unusable">You need to have an Intimacy Level of at least 10 to use advanced emoticions</string>
    <string name="tip_roomGiftCredit">Coin rebate: %1$s</string>
    <string name="txt_broadcaster">Broadcaster</string>
    <string name="txt_reservations">Bookings</string>
    <string name="txt_virtual_gift">Virtual Gift</string>
    <string name="common_hotlist_guide">Watch Hot Broadcasts</string>
    <string name="common_default_middle_dash">-</string>
    <string name="live_main_title">Live</string>
    <string name="anchor_list_empty">View Hot Broadcasts</string>
    <string name="live_main_home_title">Dashboard</string>
    <string name="live_home_month_task_progress_tips">Monthly task progress</string>
    <string name="live_home_month_task_progress_desc">Broadcast days: %1$s/%2$s</string>
    <string name="live_home_coins_tips">Coins this month</string>
    <string name="live_home_scheduled_bookings_tips">Scheduled bookings</string>
    <string name="live_home_todos_title">Todos</string>
    <string name="live_home_todos_item_title">Bookings</string>
    <string name="live_home_todos_item_desc">Upcoming One-on-One bookings</string>
    <string name="live_home_calendar_item_title">Show Calendar</string>
    <string name="live_home_calendar_item_desc">Upcoming shows</string>
    <string name="live_home_hangout_item_title">Hang-out</string>
    <string name="live_home_hangout_item_desc">Ongoing Hang-outs</string>
    <string name="live_main_me_title">Me</string>
    <string name="live_main_me_right_button_tips">Log Out</string>
    <string name="enterlive_withrider">&#160;Joined with \"%1$s\"</string>
    <string name="enterlive_norider">&#160;Joined</string>
    <string name="livemsg_temp_roomin_public_nocar"><![CDATA[<jimg src=\"ticket\"/><font color=\"#FF8700\"><xliff:g id="message_username"> %1$s</xliff:g> joined</font>]]></string>
    <string name="livemsg_temp_roomin_public_hascar"><![CDATA[<jimg src=\"ticket\"/><font color=\"#FF8700\"><xliff:g id="message_username"> %1$s</xliff:g> joined with \"%2$s\" </font>[rider:%3$s]]]></string>
    <string name="livemsg_temp_roomin_private_nocar"><![CDATA[<font color=\"#FF6D00\"><xliff:g id="message_username"> %1$s</xliff:g> joined</font>]]></string>
    <string name="livemsg_temp_roomin_private_hascar"><![CDATA[<font color=\"#FF6D00\"><xliff:g id="message_username"> %1$s</xliff:g> joined with \"%2$s\" </font>[rider:%3$s]]]></string>
    <string name="livemsg_temp_normal_public_anchor"><![CDATA[<jimg src=\"anchor1\"></jimg><font color=\"#009927\"><xliff:g id="message_username"> %1$s : </xliff:g></font><font color=\"#000000\">%2$s</font>]]></string>
    <string name="livemsg_temp_normal_public_man"><![CDATA[<jimg src=\"ticket\"/><font color=\"#297AF3\"><xliff:g id="message_username"> %1$s : </xliff:g></font><font color=\"#000000\">%2$s</font>]]></string>
    <string name="livemsg_temp_normal_private_anchor"><![CDATA[<jimg src=\"anchor2\"/><font color=\"#5DDE7E\"><xliff:g id="message_username"> %1$s : </xliff:g></font><font color=\"#FFFFFF\">%2$s</font>]]></string>
    <string name="livemsg_temp_normal_private_man"><![CDATA[<font color=\"#FF6D00\"><xliff:g id="message_username"> %1$s : </xliff:g></font><font color=\"#FFFFFF\">%2$s</font>]]></string>
    <string name="livemsg_temp_gift_public_anchor"><![CDATA[<jimg src=\"anchor1\"/><font color=\"#009927\"><xliff:g id="message_username">&#160;%1$s</xliff:g></font><font color=\"#297AF3\"> sent <xliff:g id="message_giftname">%2$s</xliff:g> </font> [gift:%3$s]<font color=\"#297AF3\"><xliff:g id="message_giftnum">%4$s</xliff:g> </font>]]></string>
    <string name="livemsg_temp_gift_public"><![CDATA[<jimg src=\"ticket\"/><font color=\"#FF8700\"><xliff:g id="message_username"> %1$s</xliff:g></font><font color=\"#297AF3\"> sent <xliff:g id="message_giftname">%2$s</xliff:g> </font> [gift:%3$s]<font color=\"#297AF3\"><xliff:g id="message_giftnum">%4$s</xliff:g> </font>]]></string>
    <string name="livemsg_temp_gift_private_man"><![CDATA[<font color=\"#FF6D00\"><xliff:g id="message_username"> %1$s</xliff:g></font><font color=\"#FFD205\"> sent <xliff:g id="message_giftname">%2$s</xliff:g> </font> [gift:%3$s]<font color=\"#FFD205\"><xliff:g id="message_giftnum">%4$s</xliff:g> </font>]]></string>
    <string name="livemsg_temp_gift_private_anchor"><![CDATA[<jimg src=\"anchor2\"/><font color=\"#5DDE7E\"><xliff:g id="message_username">&#160;%1$s</xliff:g></font><font color=\"#FFD205\"> sent <xliff:g id="message_giftname">%2$s</xliff:g> </font> [gift:%3$s]<font color=\"#FFD205\"><xliff:g id="message_giftnum">%4$s</xliff:g> </font>]]></string>
    <string name="txt_hint_input_barrage">%1$s coins per pop-up msg</string>
    <string name="liveroom_message_gift_x">x %1$d</string>
    <string name="tip_unReadLiveMsg">%d unread messages</string>
    <string name="txt_send_msg">Send</string>
    <string name="liveroom_tariff_prompt_free_public">Public Broadcast is free to watch.</string>
    <string name="liveroom_tariff_prompt_pre_public">VIP Public Broadcast is billed at %1$s coins per minute.</string>
    <string name="liveroom_tariff_prompt_silver_private">One-on-One Broadcast is billed at %1$s coins per minute.</string>
    <string name="liveroom_tariff_prompt_golden_private">One-on-One Broadcast is billed at %1$s coins per minute.</string>
    <string name="liveroom_tariff_prompt_ok">Got it</string>
    <string name="liveroom_entrancecar_joined">%1$s Joined</string>
    <string name="liveroom_vipguest">Viewers</string>
    <string name="liveroom_header_vipguestdata">%1$s / %2$s</string>
    <string name="liveroom_close_room_notify">Are you sure to end this broadcast?</string>
    <string name="common_empty_text">No des yet.</string>
    <string name="common_btn_tap_to_retry">Reload</string>
    <string name="common_btn_retry">Retry</string>
    <string name="followinglist_empty_text">No following broadcasters.</string>
    <string name="live_common_noenough_money_tips">You don\'t have enough coins, please buy more.</string>
    <string name="liveroom_transition_anchor_private_broadcast_exception">The broadcaster is in a One-on-One broadcast. Do you still wish to send the invitation?</string>
    <string name="liveroom_transition_waiting_anchor_start_tips">Waiting for the broadcaster to start broadcast...</string>
    <string name="liveroom_transition_invite_enterroom_countdown_tips">The broadcaster has accepted your invitation.One-on-One Broadcast will start in</string>
    <string name="liveroom_transition_anchorinvite_enterroom_countdown_tips">You have accepted the invitation. One-on-One broadcast will start in:</string>
    <string name="liveroom_transition_enterroom_countdown_tips">The broadcaster is getting prepared. One-on-One broadcast will start in</string>
    <string name="liveroom_transition_invite_deny_without_message">The broadcaster is not responding. Please try again later</string>
    <string name="liveroom_transition_invite_deny_with_message">Sorry, the broadcaster has declined your invitation and left you a message as below: %1$s</string>
    <string name="liveroom_noenough_money_tips_watching">You are running out of coins. Please buy more coins to continue watching.</string>
    <string name="liveroom_noenough_money_tips_watch_end">You don\'t have enough coins to continue watching this broadcast.</string>
    <string name="liveroom_transition_anchor_offline">The broadcaster offline, please check back later.</string>
    <string name="liveroom_transition_enterroom_full">Broadcast room is full. Please check back later.</string>
    <string name="liveroom_transition_broadcast_ended">Broadcast has ended. Please check back later.</string>
    <string name="liveroom_transition_anchor_invite_network_error">Failed to accept the invitation. Please try again.</string>
    <string name="liveroom_transition_audience_invite_network_error">Trouble connecting to the server, please try again later.</string>
    <string name="liveroom_transition_enterroom_network_error">Failed to enter the broadcast room, please try again later.</string>
    <string name="liveroom_transition_unknown_error_default_tips">A problem occur while communicating with the server.</string>
    <string name="liveroom_transition_invite_overtime_default_tips">Failed to connect. Please try again later.</string>
    <string name="liveroom_transition_enterroom_overtime_default_tips">Failed to enter the broadcast room, please try again later.</string>
    <string name="liveroom_live_backgroud_too_long_finish">Sorry, since you have not viewed broadcast for over 1 minute, you are exited the broadcast room automatically.</string>
    <string name="liveroom_leaving_room_time_count_tips1">Broadcast will end in&#160;</string>
    <string name="liveroom_leaving_room_time_count_tips2">&#160;has accepted. Broadcast will end in&#160;</string>
    <string name="liveroom_leaving_room_time_count_s">s</string>
    <string name="liveroom_transition_recommand_tips">Recommended Broadcasters</string>
    <string name="liveroom_transition_countdown_unit">S</string>
    <string name="liveroom_end_tips1">Broadcast has ended</string>
    <string name="liveroom_transition_invite_start_tips">Inviting the viewer to start One-on-One broadcast...</string>
    <string name="liveroom_transition_invite_overtime_tips">Could not connect to the viewer. The viewer is not responding.</string>
    <string name="liveroom_transition_invite_define_tips">Could not connect to the viewer. The viewer is not responding.</string>
    <string name="liveroom_transition_cancel_invite_tips">The invitation is being cancelled...</string>
    <string name="liveroom_transition_cancel_invite_failed_tips">Failed to cancel. The invitation has been accepted.</string>
    <string name="liveroom_invite_accepted_sysnotice">%1$s has accepted. Broadcast will start soon.</string>
    <string name="common_btn_ok">OK</string>
    <string name="common_btn_cancel">Cancel</string>
    <string name="common_btn_sure">Sure</string>
    <string name="common_btn_close">Close</string>
    <string name="common_normal_newwork_error_tips">Trouble connecting to the server, please try again later.</string>
    <string name="live_common_btn_add_credit">Add Coin</string>
    <string name="live_common_btn_yes">Yes</string>
    <string name="live_common_btn_no">No</string>
    <string name="liveroom_my_balance">My Balance</string>
    <string name="size_warning_tips1">Sorry, your phone is unable to start broadcast,please use another.</string>
    <string name="size_warning_tips2">(To start broadcast, the dpi of your screen width must be at least 720)</string>
    <string name="public_tran_autoinvi">Auto Invitation</string>
    <string name="public_tran_autoinvi_tips">Auto invite assistance can help you to reach out audience as many as possible in the shortest time.</string>
    <string name="public_tran_startlive">Start Broadcast Now</string>
    <string name="public_tran_startlive_tips">Pornography and violent content is strictly prohibited. Before starting your live broadcast please read  the Broadcaster Code of Conduct and all other policies of our platform. Please be aware of that violating our policies will lead to the termination of your account.</string>
    <string name="hangout_liveroom_controll_exit">Exit Hang-out</string>
    <string name="hangout_liveroom_controll_silent">Silent</string>
    <string name="hangout_liveroom_controll_mute">Mute</string>
</resources>