<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context="com.qpidnetwork.anchor.liveshow.login.WarningActivity">

    <ImageView
        android:layout_width="@dimen/live_size_80dp"
        android:layout_height="@dimen/live_size_80dp"
        android:src="@drawable/ic_launcher"
        android:layout_marginTop="@dimen/live_size_80dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="@dimen/live_size_22sp"
        android:layout_marginTop="@dimen/live_size_8dp"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/size_warning_tips1"
        android:textSize="@dimen/live_size_16sp"
        android:layout_marginTop="@dimen/live_size_80dp"
        android:layout_marginLeft="@dimen/live_size_60dp"
        android:layout_marginRight="@dimen/live_size_60dp"
        android:textColor="@color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/size_warning_tips2"
        android:textSize="@dimen/live_size_16sp"
        android:layout_marginTop="@dimen/live_size_12dp"
        android:layout_marginLeft="@dimen/live_size_60dp"
        android:layout_marginRight="@dimen/live_size_60dp"
        android:textColor="@color/black3"/>

</LinearLayout>
