<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <include
                    layout="@layout/include_liveroom_audience"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="visible" />
                <include
                    layout="@layout/view_liveroom_vedio_opera"/>
            </FrameLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@android:color/white">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="13dp"
                    android:layout_marginRight="13dp"
                    android:layout_marginTop="13dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/public_tran_autoinvi"
                        android:textColor="@color/public_tran_txt_color"
                        android:textSize="13sp"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"/>

                    <ImageView
                        android:id="@+id/iv_autoinvit"
                        android:layout_width="wrap_content"
                        android:minWidth="40dp"
                        android:layout_height="wrap_content"
                        android:minHeight="20dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/selector_public_trans_autoinvit_indicator"
                        />
                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginLeft="13dp"
                    android:layout_marginRight="13dp"
                    android:text="@string/public_tran_autoinvi_tips"
                    android:textSize="12sp"
                    android:textColor="@color/public_tran_tips_color"
                    android:lineSpacingExtra="4dp"/>

                <Button
                    android:id="@+id/btn_startPublicLive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="178dp"
                    android:minHeight="35dp"
                    android:text="@string/public_tran_startlive"
                    android:textColor="@android:color/white"
                    android:textAllCaps="false"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="14dp"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/bg_btn_start_public"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:background="#ECEDF1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="13dp"
                    android:layout_marginRight="13dp"
                    android:text="@string/public_tran_startlive_tips"
                    android:textColor="@color/public_tran_tips_color"
                    android:textSize="12sp"
                    android:lineSpacingExtra="4dp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
