<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_grey_white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_light_blue"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/live_main_home_title"
            android:textColor="@color/text_color_white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/rlMonthProgress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="8dp"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/live_home_month_task_progress_tips"
                android:textColor="@color/text_color_white_alpha_62"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/tvMonthlyProgress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/live_home_month_task_progress_desc"
                android:textColor="@color/text_color_white"
                android:textSize="13sp" />
        </RelativeLayout>

        <!-- 进度 -->
        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:max="100"
            android:padding="@dimen/live_size_8dp"
            android:progress="0"
            android:progressDrawable="@drawable/bg_live_home_progress"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingTop="4dp"
                android:paddingBottom="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/live_home_coins_tips"
                    android:textColor="@color/text_color_white_alpha_62"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/tvCoins"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/text_color_white"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:background="@color/bg_white_alpha_46" />

            <LinearLayout
                android:id="@+id/llScheduledBooking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingTop="4dp"
                android:paddingBottom="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/live_home_scheduled_bookings_tips"
                    android:textColor="@color/text_color_white_alpha_62"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/tvScheduled"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/text_color_white"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingLeft="13dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/live_home_todos_title"
            android:textColor="@color/text_color_black1"
            android:textSize="13sp"
            android:textStyle="bold" />

        <View
            android:layout_width="42dp"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@color/bg_light_blue" />
    </LinearLayout>

    <include
        layout="@layout/adapter_home_todos_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp" />

    <include
        layout="@layout/adapter_home_calendar_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp" />

    <include
        layout="@layout/adapter_home_hangout_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:visibility="gone"
        tools:visibility="visible" />

    <LinearLayout
        android:id="@+id/fg_main_home_item_ll_broadcast_room"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="2dp"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingLeft="13dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/broadcast_room"
                android:textColor="@color/text_color_black1"
                android:textSize="13sp"
                android:textStyle="bold" />

            <View
                android:layout_width="98dp"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@color/bg_light_blue" />
        </LinearLayout>

        <include
            layout="@layout/adapter_home_broadcast_room_item"
            />
    </LinearLayout>
</LinearLayout>